src/objects/EF_Location_Code__c.object
<CustomObject>
    <description>Location where the Service was Rendered</description>
    <fields>
        <fullName>Contract_BA_Id__c</fullName>
        <description>Copy of Billing Agreement Contract Id to avoid queries on location Code trigger.</description>
        <formula>EF_Airline_Billing_Agreement__r.Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract BA Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Contract</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Location_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Airline_Billing_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related E&amp;F Airline Billing Agreement</description>
        <label>E&amp;F Airline Billing Agreement</label>
        <referenceTo>EF_Billing_Agreement__c</referenceTo>
        <relationshipLabel>Location Codes</relationshipLabel>
        <relationshipName>Location_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Code_Details__c</fullName>
        <formula>Location_Code__r.Location_Code_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <description>Related E&amp;F Related Records</description>
        <label>Location Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EF_Related_Records__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EF_Related_Records__c</referenceTo>
        <relationshipLabel>Location Codes</relationshipLabel>
        <relationshipName>Location_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Location Code</label>
    <nameField>
        <displayFormat>LC-{0000000000}</displayFormat>
        <label>E&amp;F Location Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Codes</pluralLabel>
    <recordTypes>
        <fullName>EF_BA_Location_Code</fullName>
        <active>true</active>
        <description>Location Code related to an E&amp;F Airline Billing Agreement</description>
        <label>E&amp;F BA Location Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>EF_Contract_Location_Code</fullName>
        <active>true</active>
        <description>Location Code for an E&amp;F Contract</description>
        <label>E&amp;F Contract Location Code</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>